# trackdechets-statistiques-publiques

./: .buildpacks  .env.dist  .gitignore  Dockerfile  Pipfile  Procfile  README.md  changelog.md  compose.yaml  cron.json  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: brgm.yml  main.yml
src/: .env.dist  conftest.py  fonctionnement.md  lint.sh  requirements.txt
src/config/: urls.py  wsgi.py
src/config/settings/: base.py  dev.py  docker.py  production.py  tests.py
src/data/: data_extract.py  data_processing.py  datasets.py  figures_factory.py  page_utils.py  plot_configs.py  queries.py  ssh_utils.py  utils.py
src/static/css/: dsfr.css  icpe.css  map.css  style.css
src/static/js/: icpe.js  map.js
src/stats/: admin.py  database.py  factories.py  models.py  urls.py  views.py
src/stats/migrations/: 0001_initial.py  0002_computation_bs_created_total_and_more.py  0002_computation_bsvhu_counts_weekly.py  0003_computation_bsvhu_quantities_weekly.py  0003_computation_total_bs_created_and_more.py  0004_computation_bsff_packagings_counts_weekly.py  0004_rename_quantity_processed_sunburst_figure_computation_quantity_processed_sunburst.py  0005_computation_bsff_quantities_weekly.py  0005_computation_icpe_data.py  0005_computation_icpe_list.py  0006_computation_all_bsds_data_computation_company_data_and_more.py  0006_departementscomputation_installationscomputation_and_more.py  0007_computation_year.py  0007_remove_installationscomputation_geometry_and_more.py  0013_francecomputation.py  (+15 more)
src/templates/: base.html  map.html  spinner.html
(+24 files in other folders)
